# vulkan-engine

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: compile_shaders.cmake
examples/: CMakeLists.txt
examples/triangle/: CMakeLists.txt
examples/triangle/src/: triangle.cpp
examples/window/: CMakeLists.txt
examples/window/src/: window.cpp
include/nkgt/: engine.hpp  swapchain_utils.hpp
src/: engine.cpp  swapchain_utils.cpp
